k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nossagrana-api
  namespace: nossagrana
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: api.nossagrana.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nossagrana-api
                port:
                  number: 80
